# tkfastscatter

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  example.py  pyproject.toml  test_bench.py
.github/workflows/: release.yml
python/tkfastscatter/: __init__.py  widget.py
scripts/: build_wheel.py
src/: camera.rs  colormap.rs  grid.rs  lib.rs  renderer.rs
src/shaders/: lines.wgsl  points.wgsl
tests/: conftest.py  test_smoke.py
